レイアウトの修正

--- a/config/database.yml
+++ b/config/database.yml
@@ -18,7 +18,6 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  url: <%= ENV['DATABASE_URL'] %>
   username: postgres
   password: password
 
@@ -26,6 +25,7 @@ default: &default
 development:
   <<: *default
   database: myapp_development
+  host: db
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
